--- a/app/Resources/views/task/list.html.twig
+++ b/app/Resources/views/task/list.html.twig
@@ -24,7 +24,7 @@
                                 {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                             </button>
                         </form>
-                        {% if( ('ROLE_ADMIN' in app.user.roles and task.author is null) or (task.author == app.user) ) %}
+                        {% if( task.isAuthor(app.user)) %}
                             <form action="{{ path('task_delete', {'id' : task.id }) }}">
                                 <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
                             </form>
